--- a/index21.html
+++ b/index21.html
@@ -135,11 +135,12 @@
         <span>н</span>
         <span>д</span>
         <span>&nbsp; </span>    </br>
-        <span>Х</span>
-        <span>М</span>
+        <span>У</span>
         <span>Т</span>
         <span>А</span>
-        <span>Ц</span>
+        <span>Т</span>
+        <span>А</span>
+        <span>Х</span>
         
     </h1>
 </body>
