--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Шинэ жилийн мэндчилгээ</title>
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
     <style>
         body {
@@ -12,11 +11,22 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background: #000;
+            overflow: hidden;
+        }
 
+        .logo-container {
+            margin-bottom: 2rem;
+            animation: fadeIn 2s ease-in;
+        }
+
+        .logo {
+            max-width: 200px;
+            height: auto;
         }
 
         h1 {
@@ -24,124 +34,167 @@
             padding: 0;
             color: #111;
             font-size: 5em;
+            text-align: center;
         }
 
         h1 span {
-            display: table-cell;
+            display: inline-block;
             margin: 0;
             padding: 0;
             animation: animate 3.5s linear infinite;
         }
 
-        h1 span:nth-child(1) {
-            animation-delay: 0s;
+        .controls {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 1000;
         }
 
-        h1 span:nth-child(2) {
-            animation-delay: 0.25s;
+        .controls button {
+            background: rgba(255, 255, 255, 0.2);
+            border: 1px solid #fff;
+            color: #fff;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 3px;
+            transition: all 0.3s ease;
         }
 
-        h1 span:nth-child(3) {
-            animation-delay: 0.5s;
+        .controls button:hover {
+            background: rgba(255, 255, 255, 0.3);
         }
 
-        h1 span:nth-child(4) {
-            animation-delay: 0.75s;
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
-        h1 span:nth-child(5) {
-            animation-delay: 1s;
+        @keyframes snowfall {
+            0% { transform: translateY(-10vh) translateX(0); }
+            100% { transform: translateY(100vh) translateX(20px); }
         }
 
-        h1 span:nth-child(6) {
-            animation-delay: 1.25s;
+        .snowflake {
+            position: fixed;
+            color: white;
+            font-size: 1.5em;
+            user-select: none;
+            z-index: -1;
         }
 
-        h1 span:nth-child(7) {
-            animation-delay: 1.5s;
-        }
-
-        h1 span:nth-child(8) {
-            animation-delay: 1.75s;
-        }
-
-        h1 span:nth-child(9) {
-            animation-delay: 2s;
-        }
-
-        h1 span:nth-child(10) {
-            animation-delay: 2.25s;
-        }
-
-        h1 span:nth-child(11) {
-            animation-delay: 2.5s;
-        }
-
-        h1 span:nth-child(12) {
-            animation-delay: 2.75s;
-        }
-
-        h1 span:nth-child(13) {
-            animation-delay: 3s;
-        }
-
-        h1 span:nth-child(14) {
-            animation-delay: 3.25s;
-        }
+        /* Individual span animations */
+        h1 span:nth-child(1) { animation-delay: 0s; }
+        h1 span:nth-child(2) { animation-delay: 0.25s; }
+        h1 span:nth-child(3) { animation-delay: 0.5s; }
+        h1 span:nth-child(4) { animation-delay: 0.75s; }
+        h1 span:nth-child(5) { animation-delay: 1s; }
+        h1 span:nth-child(6) { animation-delay: 1.25s; }
+        h1 span:nth-child(7) { animation-delay: 1.5s; }
+        h1 span:nth-child(8) { animation-delay: 1.75s; }
+        h1 span:nth-child(9) { animation-delay: 2s; }
+        h1 span:nth-child(10) { animation-delay: 2.25s; }
+        h1 span:nth-child(11) { animation-delay: 2.5s; }
+        h1 span:nth-child(12) { animation-delay: 2.75s; }
+        h1 span:nth-child(13) { animation-delay: 3s; }
+        h1 span:nth-child(14) { animation-delay: 3.25s; }
 
         @keyframes animate {
-
-            0%,
-            100% {
+            0%, 100% {
                 color: #fff;
                 filter: blur(2px);
                 text-shadow: 0 0 10px #00b3ff,
-                    0 0 20px #00b3ff,
-                    0 0 40px #00b3ff,
-                    0 0 80px #00b3ff,
-                    0 0 120px #00b3ff,
-                    0 0 200px #00b3ff,
-                    0 0 300px #00b3ff,
-                    0 0 400px #00b3ff;
+                            0 0 20px #00b3ff,
+                            0 0 40px #00b3ff,
+                            0 0 80px #00b3ff,
+                            0 0 120px #00b3ff,
+                            0 0 200px #00b3ff,
+                            0 0 300px #00b3ff,
+                            0 0 400px #00b3ff;
             }
-
-           5%,
-            95% {
+            5%, 95% {
                 color: #111;
                 filter: blur(0px);
                 text-shadow: none;
-
-
             }
-
         }
     </style>
 </head>
-
 <body>
-
+    <div class="logo-container">
+        <img src="/api/placeholder/200/100" alt="Logo" class="logo">
+    </div>
+    
     <h1>
         <span>Ш</span>
         <span>и</span>
         <span>н</span>
-        <span>э</span>        
-        <span>&nbsp; </span>
-        <span>о </span>
+        <span>э</span>
+        <span>&nbsp;</span>
+        <span>о</span>
         <span>н</span>
         <span>ы</span>
-        <span>&nbsp; </span>
+        <span>&nbsp;</span>
         <span>м</span>
         <span>э</span>
         <span>н</span>
         <span>д</span>
-        <span>&nbsp; </span>    </br>
+        <span>!</span>
+        <br>
         <span>Х</span>
         <span>М</span>
         <span>Т</span>
         <span>А</span>
         <span>Ц</span>
-        
     </h1>
-</body>
 
+    <div class="controls">
+        <button onclick="toggleMusic()" id="musicBtn">Play Music</button>
+    </div>
+
+    <audio id="bgMusic" loop>
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    </audio>
+
+    <script>
+        // Music control
+        const music = document.getElementById('bgMusic');
+        const musicBtn = document.getElementById('musicBtn');
+        let isPlaying = false;
+
+        function toggleMusic() {
+            if (isPlaying) {
+                music.pause();
+                musicBtn.textContent = 'Play Music';
+            } else {
+                music.play();
+                musicBtn.textContent = 'Pause Music';
+            }
+            isPlaying = !isPlaying;
+        }
+
+        // Snowfall effect
+        function createSnowflake() {
+            const snowflake = document.createElement('div');
+            snowflake.className = 'snowflake';
+            snowflake.textContent = '❄';
+            snowflake.style.left = Math.random() * 100 + 'vw';
+            snowflake.style.animation = `snowfall ${Math.random() * 3 + 2}s linear infinite`;
+            snowflake.style.opacity = Math.random();
+            snowflake.style.fontSize = `${Math.random() * 20 + 10}px`;
+            document.body.appendChild(snowflake);
+
+            // Remove snowflake after animation
+            setTimeout(() => {
+                snowflake.remove();
+            }, 5000);
+        }
+
+        // Create snowflakes periodically
+        setInterval(createSnowflake, 100);
+    </script>
+</body>
 </html>
