--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="/api/placeholder/200/100" alt="Logo" class="logo">
+        <img src="/imp/logo.png" alt="Logo" class="logo">
     </div>
     
     <h1>
