--- a/index.html
+++ b/index.html
@@ -131,26 +131,7 @@
     </div>
     
     <h1>
-        <span>Ш</span>
-        <span>и</span>
-        <span>н</span>
-        <span>э</span>
-        <span>&nbsp;</span>
-        <span>о</span>
-        <span>н</span>
-        <span>ы</span>
-        <span>&nbsp;</span>
-        <span>м</span>
-        <span>э</span>
-        <span>н</span>
-        <span>д</span>
-        <span>!</span>
-        <br>
-        <span>Х</span>
-        <span>М</span>
-        <span>Т</span>
-        <span>А</span>
-        <span>Ц</span>
+       Танд шинэ он шинэ жилийн баярын мэндийг хүргэ!
     </h1>
 
     <div class="typing-text" id="typingText">_</div>
