--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     
     <h1>
-       Танд шинэ он шинэ жилийн баярын мэндийг хүргэ!
+       Танд шинэ он шинэ жилийн баярын мэндийг хүргэе!
     </h1>
 
     <div class="typing-text" id="typingText">_</div>
