--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     
     <h1>
-       Танд шинэ оны шинэ жилийн баярын мэндийг хүргэе!
+       Танд шинэ он,шинэ жилийн баярын мэндийг хүргэе!
     </h1>
 
     <div class="typing-text" id="typingText">_</div>
