--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         h1 {
             margin: 0;
             padding: 0;
-            color: #fff;
+            color: #ffee00;
             font-size: 5em;
             text-align: center;
             z-index: 1;
@@ -132,7 +132,7 @@
     </div>
     
     <h1>
-       Танд шинэ он,шинэ жилийн баярын мэндийг хүргэе!
+       Танд шинэ он, шинэ жилийн баярын мэндийг хүргэе!
     </h1>
 
     <div class="typing-text" id="typingText">_</div>
