--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: 'Bad Script', cursive;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -17,10 +17,11 @@
             min-height: 100vh;
             background: #000;
             overflow-x: hidden;
+            position: relative;
         }
 
         .logo-container {
-            margin-bottom: 2rem;
+            margin: 20px auto;
             animation: fadeIn 2s ease-in;
             z-index: 1;
             background: rgba(255, 255, 255, 0.9);
@@ -38,27 +39,49 @@
             max-width: 200px;
         }
 
-        h1 {
-            margin: 0;
+        .content-container {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
             padding: 0 15px;
-            color: #fff;
-            font-size: 3em;
+            box-sizing: border-box;
+            margin: 20px 0;
+        }
+
+        .text-container {
+            width: 100%;
             text-align: center;
-            z-index: 1;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            margin: 10px 0;
+        }
+
+        .yellow-text {
+            color: #ffff00;
+            font-size: 32px;
+            font-weight: bold;
+            text-shadow: 0 0 10px rgba(255, 255, 0, 0.5);
+            margin: 0;
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
             word-wrap: break-word;
+            line-height: 1.4;
         }
 
         @media (max-width: 768px) {
-            h1 {
-                font-size: 2em;
-                margin-bottom: 20px;
+            .yellow-text {
+                font-size: 24px;
+                padding: 5px;
             }
-        }
-
-        h1 span {
-            display: inline-block;
-            animation: textAnimate 3.5s linear infinite;
         }
 
         .typing-text {
@@ -66,7 +89,7 @@
             font-family: monospace;
             font-size: 18px;
             position: fixed;
-            bottom: 100px;
+            bottom: 80px;
             left: 50%;
             transform: translateX(-50%);
             white-space: nowrap;
@@ -79,13 +102,6 @@
             text-align: center;
             background: rgba(0, 0, 0, 0.7);
             padding: 10px;
-        }
-
-        @media (max-width: 768px) {
-            .typing-text {
-                font-size: 14px;
-                bottom: 80px;
-            }
         }
 
         .controls {
@@ -115,10 +131,6 @@
             max-width: 200px;
         }
 
-        .controls button:hover {
-            background: rgba(0, 255, 0, 0.3);
-        }
-
         canvas {
             position: fixed;
             top: 0;
@@ -127,54 +139,27 @@
             opacity: 0.7;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
         @keyframes typing {
             0% { width: 0; }
             50% { width: 90%; }
             90% { width: 90%; }
             100% { width: 0; }
         }
-
-        @keyframes textAnimate {
-            0%, 100% {
-                color: #fff;
-                filter: blur(1px);
-                text-shadow: 0 0 10px #fff,
-                            0 0 20px #fff,
-                            0 0 40px #fff;
-            }
-            5%, 95% {
-                color: #eee;
-                filter: blur(0px);
-                text-shadow: none;
-            }
-        }
-
-        .content-wrapper {
-            position: relative;
-            z-index: 1;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px 0;
-        }
     </style>
 </head>
 <body>
-    <div class="content-wrapper">
+    <canvas id="matrixRain"></canvas>
+
+    <div class="content-container">
         <div class="logo-container">
             <img src="https://raw.githubusercontent.com/nbilgee/newyear21.github.io/master/img/logo.png" alt="ХМТАЦ Logo" class="logo">
         </div>
         
-        <h1>
-           Танд шинэ он,шинэ жилийн баярын мэндийг хүргэе!
-        </h1>
+        <div class="text-container">
+            <div class="yellow-text">Танд шинэ</div>
+            <div class="yellow-text">он, шинэ</div>
+            <div class="yellow-text">жилийн</div>
+        </div>
     </div>
 
     <div class="typing-text" id="typingText">_</div>
@@ -182,8 +167,6 @@
     <div class="controls">
         <button onclick="toggleMusic()" id="musicBtn">Pause Music</button>
     </div>
-
-    <canvas id="matrixRain"></canvas>
 
     <audio id="bgMusic" autoplay loop>
         <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
