--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
         </div>
         
         <div class="text-container">
-            <div class="yellow-text">Танд шинэ</div>
-            <div class="yellow-text">он, шинэ</div>
-            <div class="yellow-text">жилийн</div>
+            <div class="yellow-text">Танд шинэ он,</div>
+            <div class="yellow-text"> шинэ жилийн</div>
+            <div class="yellow-text">баярын мэндийг</div>
+            <div class="yellow-text">хүргэе!</div>
         </div>
     </div>
 
