--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 musicBtn.textContent = 'Play Music';
             } else {
                 music.play();
-                musicBtn.textContent = 'Pause Music';
+                musicBtn.textContent = 'Дууг тоглуулах';
             }
             isPlaying = !isPlaying;
         }
