--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             z-index: 2;
             text-align: center;
             width: 100%;
+            font-family: sans-serif;
         }
 
         .yellow-text {
@@ -120,10 +121,10 @@
         function toggleMusic() {
             if (isPlaying) {
                 music.pause();
-                musicBtn.textContent = 'Play Music';
+                musicBtn.textContent = 'Дуу тоглуулах';
             } else {
                 music.play();
-                musicBtn.textContent = 'Дууг тоглуулах';
+                musicBtn.textContent = 'Дууг зогсоох';
             }
             isPlaying = !isPlaying;
         }
