--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <button class="music-button" onclick="toggleMusic()" id="musicBtn">Дуу тоглуулах</button>
 
     <audio id="bgMusic" loop>
-        <source src="https://drive.google.com/file/d/1Y_-HEGWzuJcBIGZaN9FaxXiODNb8-Vqe/view" type="audio/mpeg">
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
     </audio>
 
     <script>
